# stock-forecast

./: ABOUT PROJECT.docx  PROJECT_SPA_2.ipynb  app.py  decomposition.csv  future_prices.csv  model_pickle  pyproject.toml  requirements.txt
.ipynb_checkpoints/: PROJECT_SPA_2-checkpoint.ipynb  app.py-checkpoint.ipynb
static/: styles.css
templates/: index.html
