[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-forecast"
version = "1.0.0"
description = "Stock price forecast web app using Flask"
authors = [
    { name="Shruti Deshmane", email="your-email@example.com" }
]
readme = "ABOUT PROJECT.docx"
requires-python = ">=3.13.0"

dependencies = [
    "Flask==3.1.2",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.7.2",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "xgboost==3.0.5",
    "statsmodels==0.14.4",
    "nltk==3.9.1",
    "beautifulsoup4==4.12.2",
    "neattext==0.1.3",
    "tensorflow==2.14.0",
    "keras==3.10.0",
    "keras-tuner==1.4.7",
    "requests==2.32.0",
    "python-dateutil==2.8.2",
    "pytz==2025.7",
    "tqdm==4.66.1",
    "joblib==1.3.2",
    "attrs==23.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
